# zoom-sync

./: Cargo.toml  LICENSE  README.md  flake.nix
boards/core/: Cargo.toml
boards/core/src/: board.rs  features.rs  lib.rs
boards/tiga-protocol/: Cargo.toml
boards/tiga-protocol/src/: abi.rs  lib.rs  types.rs  utils.rs
boards/zoom-tkl-dyna/: Cargo.toml
boards/zoom-tkl-dyna/src/: abi.rs  crc.rs  lib.rs  types.rs
boards/zoom65v3/: Cargo.toml  README.md
boards/zoom65v3/src/: abi.rs  checksum.rs  float.rs  lib.rs  types.rs
boards/zoom75-tiga/: Cargo.toml
boards/zoom75-tiga/src/: lib.rs
docs/: README.md  zoom-sync.1
src/: config.rs  detection.rs  info.rs  lock.rs  main.rs  media.rs  screen.rs  weather.rs
src/tray/: commands.rs  daemon.rs  menu.rs  mod.rs
zoom-sync-core/src/: features.rs
