[package]
name = "zoom-sync"
version = "0.1.2"
description = "Cross-platform utility for syncing zoom65v3 screen modules"
repository = "https://github.com/ozwaldorf/zoom-sync"
authors = [ "ozwaldorf <self@ossian.dev>" ]
license = "MIT"
edition = "2021"

[workspace]
members = ["boards/core", "boards/zoom65v3"]

[workspace.dependencies]
chrono = "0.4.38" # local time

[dependencies]
# keyboard management
zoom-sync-core = { path = "./boards/core" }
zoom65v3 = { path = "./boards/zoom65v3", version = "0.3" }
hidapi = { version = "2.6", features = ["windows-native"] } # board detection

# runtime and scaffalding
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1.16"
futures = "0.3.31"
rayon = "1.10.0"
either = "1.13"

# cli parsing
bpaf = { version = "0.9", features = ["derive", "dull-color", "docgen"] }
humantime = "2.1.0"

# media utils
image = "0.25.5" # image reading and operations
gif = "0.13.1" # gif encoding
rgb565 = "0.1.3" # image encoding

# data fetching
chrono.workspace = true # local time
ipinfo = "3.0.1" # free geolocation api
open-meteo-api = "0.1.4" # free weather api
nvml-wrapper = "0.10.0" # nvidia gpu temp
sysinfo = "0.33.1" # cpu temp

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12.2", features = ["tokio"] } # reading keypress events on linux

