[package]
name = "zoom-sync"
version = "0.2.0"
description = "Cross-platform utility for syncing zoom65v3 screen modules"
repository = "https://github.com/ozwaldorf/zoom-sync"
authors = [ "ozwaldorf <self@ossian.dev>" ]
license = "MIT"
edition = "2021"

[workspace]
members = ["boards/core", "boards/zoom65v3"]

[workspace.dependencies]
chrono = "0.4.38" # local time
hidapi = { version = "2.6", features = ["windows-native"] } # board detection

[dependencies]
# keyboard management
zoom-sync-core = { path = "./boards/core", version = "0.1" }
zoom65v3 = { path = "./boards/zoom65v3", version = "0.4" }
hidapi = { workspace = true }

# runtime and scaffalding
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1.16"
futures = "0.3.31"
rayon = "1.10.0"
either = "1.13"

# cli parsing
bpaf = { version = "0.9", features = ["derive", "dull-color", "docgen"] }
humantime = "2.1.0"

# media utils
image = "0.25.5" # image reading and operations
gif = "0.13.1" # gif encoding
rgb565 = "0.1.3" # image encoding

# data fetching
chrono.workspace = true # local time
ipinfo = "3.0.1" # free geolocation api
open-meteo-api = "0.1.4" # free weather api
nvml-wrapper = "0.10.0" # nvidia gpu temp
sysinfo = "0.33.1" # cpu temp

# system tray
tray-icon = { version = "0.17", default-features = false }
muda = { version = "0.14", default-features = false }
rfd = "0.17"
notify-rust = "4"

# errors
thiserror = "2"

# config persistence
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
humantime-serde = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12.2", features = ["tokio"] } # reading keypress events on linux
gtk = "0.18"  # required for tray icon initialization

