[package]
name = "zoom65v3"
version = "0.3.0"
description = "Reverse engineered hidapi bindings to zoom65v3 screen modules"
repository = "https://github.com/ozwaldorf/zoom-sync"
authors = [ "ozwaldorf <self@ossian.dev>" ]
license = "MIT"
edition = "2021"

[dependencies]
zoom-sync-core = { path = "../core" }
hidapi = { workspace = true }
chrono = { workspace = true }
